--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 
-  <!-- <script src="./lesson1.js"></script>
-  <script src="./lesson2.js"></script> -->
-  <script src="./lesson3.js"></script>
+  <!-- <script src="./lesson1.js"></script> -->
+  <script src="./lesson2.js"></script>
+  <!-- <script src="./lesson3.js"></script> -->
 </body>
 
 </html>
